# trading

./: .dockerignore  .gitignore  LICENSE  README.md  pnpm-workspace.yaml  run-bots.sh  trading-cli
.github/workflows/: non-agent-tests.yml
.openclaw/extensions/trading-bridge/: openclaw.plugin.json  package-lock.json  package.json
.openclaw/extensions/trading-bridge/src/: index.test.ts  index.ts
TRADES/: README.md  trades-2026-02-10.jsonl
clawdbot-workflows/: docker-compose.yml
crates/: Cargo.toml  README.md
crates/coinbase_at_adapter/: Cargo.toml
crates/coinbase_at_adapter/src/: lib.rs
crates/exchange_coinbase_spot/: Cargo.toml
crates/exchange_coinbase_spot/src/: lib.rs
crates/exchange_core/: Cargo.toml
crates/exchange_core/src/: lib.rs
crates/exchange_derivatives_paper/: Cargo.toml
crates/exchange_derivatives_paper/src/: lib.rs
crates/exchange_kalshi/: Cargo.toml
crates/exchange_kalshi/src/: lib.rs
crates/paper_exchange_adapter/: Cargo.toml
crates/paper_exchange_adapter/src/: lib.rs
crates/risk_core/: Cargo.toml
crates/risk_core/src/: lib.rs
crates/strategy_core/: Cargo.toml
crates/strategy_core/src/: lib.rs
crates/strategy_crypto_momentum/: Cargo.toml
crates/strategy_crypto_momentum/src/: lib.rs
crates/strategy_kalshi_arbitrage/: Cargo.toml
crates/strategy_kalshi_arbitrage/src/: lib.rs
crates/strategy_kalshi_weather/: Cargo.toml
crates/strategy_kalshi_weather/src/: lib.rs
crates/trading_daemon/: Cargo.toml  Dockerfile
crates/trading_daemon/migrations/: 0001_runtime.sql
crates/trading_daemon/src/: main.rs
crates/trading_domain/: Cargo.toml
crates/trading_domain/src/: lib.rs
crates/trading_protocol/: Cargo.toml
crates/trading_protocol/src/: lib.rs
crates/tradingctl/: Cargo.toml
crates/tradingctl/src/: main.rs
llm-workflows/: README.md  package.json
llm-workflows/llm-rules-bot/: Cargo.toml  README.md  config.toml
llm-workflows/llm-rules-bot/crates/candidate-engine/: Cargo.toml
llm-workflows/llm-rules-bot/crates/candidate-engine/src/: lib.rs  scanner.rs  scorer.rs  types.rs
llm-workflows/llm-rules-bot/crates/decision-engine/: Cargo.toml
llm-workflows/llm-rules-bot/crates/decision-engine/src/: engine.rs  lib.rs  types.rs
llm-workflows/llm-rules-bot/crates/execution-engine/: Cargo.toml
llm-workflows/llm-rules-bot/crates/execution-engine/src/: lib.rs
llm-workflows/llm-rules-bot/crates/llm-client/: Cargo.toml
llm-workflows/llm-rules-bot/crates/llm-client/src/: client.rs  lib.rs  types.rs
llm-workflows/llm-rules-bot/src/: bot.rs  budget.rs  config.rs  journal.rs  main.rs  risk.rs  temporal.rs
non-agent-workflows/: README.md  package.json
non-agent-workflows/arbitrage-bot/: Cargo.toml  README.md  config.toml
non-agent-workflows/arbitrage-bot/crates/arb_strategy/: Cargo.toml
non-agent-workflows/arbitrage-bot/crates/arb_strategy/src/: arb.rs  config.rs  exec.rs  fees.rs  lib.rs  quotes.rs  risk.rs  universe.rs
non-agent-workflows/arbitrage-bot/src/: config.rs  main.rs
non-agent-workflows/libs/common/: Cargo.toml
non-agent-workflows/libs/common/src/: config.rs  error.rs  lib.rs  types.rs
non-agent-workflows/libs/kalshi_client/: Cargo.toml
non-agent-workflows/libs/kalshi_client/src/: auth.rs  lib.rs  rate_limit.rs  rest.rs  ws.rs
non-agent-workflows/weather-bot/: Cargo.toml  README.md  config.toml
non-agent-workflows/weather-bot/crates/common/src/: config.rs  types.rs
non-agent-workflows/weather-bot/crates/google_weather_client/: Cargo.toml
non-agent-workflows/weather-bot/crates/google_weather_client/src/: lib.rs
non-agent-workflows/weather-bot/crates/kalshi_client/src/: auth.rs  lib.rs  rate_limit.rs  rest.rs  ws.rs
non-agent-workflows/weather-bot/crates/noaa_client/: Cargo.toml
non-agent-workflows/weather-bot/crates/noaa_client/src/: lib.rs  probability.rs
non-agent-workflows/weather-bot/crates/strategy/: Cargo.toml
non-agent-workflows/weather-bot/crates/strategy/src/: cache.rs  engine.rs  lib.rs  risk.rs
non-agent-workflows/weather-bot/src/: config.rs  main.rs
observability-platform/: README.md
observability-platform/contracts/: README.md  openapi.yaml  sports-recommendation.schema.json  trace-envelope.schema.json  trace-event.schema.json
observability-platform/dashboard/: README.md  app.js  index.html  styles.css
observability-platform/docs/: architecture.md  operations.md
observability-platform/shared/: http-json.mjs
observability-platform/sports-agent-worker/: Cargo.toml  README.md
observability-platform/sports-agent-worker/src/: main.rs
observability-platform/temporal-broker/: README.md  broker.mjs
observability-platform/tests/: config-response.test.mjs  http-json.test.mjs  local-ops-cache.test.mjs  temporal-broker.api.test.mjs  trace-api.api.test.mjs
observability-platform/tests/helpers/: process-test-utils.mjs
observability-platform/trace-api/: README.md  config-response.mjs  local-ops-cache.mjs  server.mjs
