[package]
name = "coinbase_at_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
exchange_core = { path = "../exchange_core" }
serde_json = "1.0"
tokio = { version = "1.35", features = ["sync"] }
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1.7", features = ["v4"] }
