[package]
name = "coinbase_at_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
exchange_core = { path = "../exchange_core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["sync"] }
chrono = { version = "0.4", features = ["clock"] }
