[package]
name = "paper_exchange_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
exchange_core = { path = "../exchange_core" }
tokio = { version = "1.35", features = ["sync", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1.7", features = ["v4"] }
