[package]
name = "trading_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
trading_protocol = { path = "../trading_protocol" }
risk_core = { path = "../risk_core" }
strategy_core = { path = "../strategy_core" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
fs2 = "0.4" # For file locking
bytes = "1.5"
tokio-util = { version = "0.7.10", features = ["codec"] }
