[package]
name = "tradingctl"
version = "0.1.0"
edition = "2021"

[dependencies]
trading_protocol = { path = "../trading_protocol" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3"

