[workspace]
members = [
    "crates/google_weather_client",
    "crates/noaa_client",
    "crates/strategy",
]
resolver = "2"

[package]
name = "weather-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weather-bot"
path = "src/main.rs"

[dependencies]
common = { path = "../libs/common" }
kalshi_client = { path = "../libs/kalshi_client" }
noaa_client = { path = "crates/noaa_client" }
google_weather_client = { path = "crates/google_weather_client" }
strategy = { path = "crates/strategy" }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
