[package]
name = "kalshi_client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync", "time", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"

rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
governor = "0.6"
