[package]
name = "candidate-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
kalshi_client = { workspace = true }
common = { workspace = true }
chrono = { workspace = true }
