[package]
name = "execution-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
kalshi_client = { workspace = true }
common = { workspace = true }
decision-engine = { path = "../decision-engine" }
