[package]
name = "llm-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
common = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
