[package]
name = "google_weather_client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../../libs/common" }

reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
